# shopify-forecast-mcp

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  Dockerfile  LICENSE  README.md  docker-entrypoint.sh  pyproject.toml
.github/workflows/: ci.yml  publish.yml
.planning/: MILESTONES.md  PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md  config.json
.planning/milestones/: v0.1.0-REQUIREMENTS.md
.planning/phases/01-scaffold-config/: 00-INDEX.md  01-01-PLAN.md  01-01-SUMMARY.md  01-02-PLAN.md  01-02-SUMMARY.md  01-03-PLAN.md  01-03-SUMMARY.md  01-04-PLAN.md  01-04-SUMMARY.md  deferred-items.md  timesfm-sha.txt
.planning/phases/02-shopify-client/: 00-INDEX.md  02-01-PLAN.md  02-01-SUMMARY.md  02-02-PLAN.md  02-02-SUMMARY.md  02-03-PLAN.md  02-03-SUMMARY.md  02-04-PLAN.md  02-04-SUMMARY.md  02-RESEARCH.md
.planning/phases/03-time-series-forecaster/: 00-INDEX.md  03-01-PLAN.md  03-01-SUMMARY.md  03-02-PLAN.md  03-02-SUMMARY.md  03-03-PLAN.md  03-03-SUMMARY.md  03-04-PLAN.md  03-04-SUMMARY.md
.planning/phases/04-mcp-server-skeleton-cli-mvp/: 00-INDEX.md  04-01-PLAN.md  04-01-SUMMARY.md  04-02-PLAN.md  04-02-SUMMARY.md  04-03-PLAN.md  04-03-SUMMARY.md  04-04-PLAN.md  04-04-SUMMARY.md
.planning/phases/04.1-shopify-cli-toolkit-integration/: 00-INDEX.md  04.1-01-PLAN.md  04.1-01-SUMMARY.md  04.1-02-PLAN.md  04.1-02-SUMMARY.md  04.1-03-PLAN.md  04.1-03-SUMMARY.md  04.1-04-PLAN.md  04.1-04-SUMMARY.md  04.1-CONTEXT.md
.planning/phases/05-analytics-covariates-remaining-tools/: 05-01-PLAN.md  05-01-SUMMARY.md  05-02-PLAN.md  05-02-SUMMARY.md  05-03-PLAN.md  05-03-SUMMARY.md  05-CONTEXT.md  05-DISCUSSION-LOG.md  05-RESEARCH.md  05-REVIEW.md  05-VALIDATION.md  05-VERIFICATION.md
.planning/phases/06-advanced-tools/: 06-01-PLAN.md  06-01-SUMMARY.md  06-02-PLAN.md  06-02-SUMMARY.md  06-03-PLAN.md  06-03-SUMMARY.md  06-CONTEXT.md  06-DISCUSSION-LOG.md  06-RESEARCH.md  06-REVIEW.md  06-VALIDATION.md  06-VERIFICATION.md
.planning/phases/07-distribution-docs/: 07-01-PLAN.md  07-01-SUMMARY.md  07-02-PLAN.md  07-02-SUMMARY.md  07-03-PLAN.md  07-03-SUMMARY.md  07-04-PLAN.md  07-04-SUMMARY.md  07-05-PLAN.md  07-05-SUMMARY.md  07-CONTEXT.md  07-DISCUSSION-LOG.md  07-RESEARCH.md  07-VALIDATION.md  07-VERIFICATION.md
.planning/research/: SUMMARY.md  mcp-sdk.md  packaging.md  shopify-graphql.md  timesfm.md
docs/: ARCHITECTURE.md  RELEASE.md  SETUP.md  TOOLS.md
docs/superpowers/specs/: 2026-04-16-shopify-cli-integration-design.md
scripts/: gen_tools_doc.py  generate_fixtures.py
src/shopify_forecast_mcp/: __main__.py  cli.py  config.py
src/shopify_forecast_mcp/core/: analytics.py  bulk_ops.py  cache.py  covariates.py  exceptions.py  forecast_result.py  forecaster.py  inventory.py  metrics.py  normalize.py  scenarios.py  shopify_backend.py  shopify_client.py  shopify_exec.py  timeseries.py
src/shopify_forecast_mcp/mcp/: __init__.py  server.py  tools.py
tests/: conftest.py  test_analytics.py  test_backend.py  test_backend_integration.py  test_bulk_ops.py  test_cache.py  test_changelog_structure.py  test_claude_desktop_snippet.py  test_cli.py  test_cli_auth.py  test_cli_scenarios.py  test_config.py  test_covariates.py  test_dockerfile_structure.py  test_docs_completeness.py  test_fetch_wrappers.py  test_forecast_result.py  test_forecaster.py  test_integration_forecast.py  test_inventory.py  test_mcp_server.py  test_mcp_tools_analytics.py  test_mcp_tools_demand.py  test_mcp_tools_revenue.py  test_mcp_tools_scenarios.py  test_metrics.py  test_multistore.py  test_normalize.py  test_paginated.py  test_scenarios.py  test_shopify_client.py  test_timeseries.py  test_timeseries_resample.py  test_workflow_structure.py
tests/fixtures/: mock_bulk.jsonl  mock_bulk_responses.json  mock_orders_paginated.json  sample_daily_revenue.csv  sample_orders.json
